@@ -710,6 +710,7 @@ Brian Merrell
 Luke Mewburn
 Carl Meyer
 Mike Meyer
+Piotr Meyer
 Steven Miale
 Trent Mick
 Tom Middleton
@@ -742,7 +743,7 @@ Sape Mullender
 Michael Muller
 Neil Muller
 R. David Murray
-Piotr Meyer
+Matti Mäki
 Dale Nagata
 John Nagle
 Takahiro Nakayama
